# StackLang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
programs/: mandelbrot.sl  program1.txt  program2.sl  program2.txt  program3.sl  program3.txt  program4.sl  program4.txt  program5.sl  program5.txt  program6.sl  program6.txt  program7.sl  program8.sl
programs/arrays/: multidim1.sl  simple1.sl  simple2.sl  simple3.sl
programs/basic/: and1.sl  basic1.sl  basic2.sl  basic3.sl  basic4.sl  branches.sl  or1.sl
programs/classes/: access1.sl  access2.sl  access3.sl  access4.sl  access5.sl  accessmodifiers1.sl  array1.sl  constructor1.sl  constructor2.sl  fieldarray1.sl  fieldarray2.sl  loaded1.sl  loaded2.sl  loaded3.sl  namespace1.sl  namespace2.sl  namespace3.sl  namespace4.sl  namespace5.sl  point1.sbc  point2.sbc  selfusage2.txt  simple1.sl  simple2.sl  simple3.sl  simple4.sl  simple5.sl  simple6.sl
programs/functions/: rec1.sl  rec2.sl
programs/namespaces/: simple1.sl  simple2.sl  using1.sl  using2.sl  using3.sl  usingclass1.sl  usingclass2.sl  usingclass3.sl  usingclass4.sl  usingclass5.sl
rtlib/: math.sbc  math.sl  point.sbc  point.sl  string.sbc  string.sl  vector.sbc
src/: arrayast.cpp  arrayast.h  assemblyparser.cpp  assemblyparser.h  ast.cpp  ast.h  asthelpers.cpp  asthelpers.h  asts.h  binder.cpp  binder.h  blockast.cpp  blockast.h  builtin.cpp  builtin.h  classast.cpp  classast.h  codegenerator.cpp  codegenerator.h  compiler.cpp  compiler.h  controlflowgraph.cpp  controlflowgraph.h  expressionast.cpp  expressionast.h  function.cpp  function.h  functionast.cpp  functionast.h  helpers.cpp  helpers.h  lexer.cpp  lexer.h  loader.cpp  loader.h  namespace.cpp  namespace.h  namespaceast.cpp  namespaceast.h  object.cpp  (+30 more)
tests/: compiler-test.h  type-test.h
(+30 files in other folders)
